Fix desktop breakpoint, Add desktop animation

--- a/messages.html
+++ b/messages.html
@@ -3697,7 +3697,7 @@
                           </div>
                         </section>
                         <section id="thread_details_panel_md_1" aria-label="Conversation Details Panel" tabindex="-1"
-                          data-testid="orbital-panel-details" aria-hidden="false" class="_50rkbdl hidden"
+                          data-testid="orbital-panel-details" aria-hidden="false" class="_x6sr1rm hidden"
                           style="--orbital-panel-transition-duration:500ms; --orbital-panel-width-md:375px; --orbital-panel-width-lg:375px; --orbital-panel-width-xl:375px;">
                           <div class="_ijm3lbp" style="">
                             <div class="_bnkeqa">
@@ -3742,7 +3742,7 @@
                           </div>
                         </section>
                         <section id="thread_details_panel_md_3" aria-label="Conversation Details Panel" tabindex="-1"
-                          data-testid="orbital-panel-details" aria-hidden="false" class="_50rkbdl hidden"
+                          data-testid="orbital-panel-details" aria-hidden="false" class="_x6sr1rm hidden"
                           style="--orbital-panel-transition-duration:500ms; --orbital-panel-width-md:375px; --orbital-panel-width-lg:375px; --orbital-panel-width-xl:375px;">
                           <div class="_ijm3lbp" style="">
                             <div class="_bnkeqa">
@@ -3863,7 +3863,7 @@
                           </div>
                         </section>
                         <section id="thread_details_panel_md_4" aria-label="Conversation Details Panel" tabindex="-1"
-                          data-testid="orbital-panel-details" aria-hidden="false" class="_50rkbdl hidden"
+                          data-testid="orbital-panel-details" aria-hidden="false" class="_x6sr1rm hidden"
                           style="--orbital-panel-transition-duration:500ms; --orbital-panel-width-md:375px; --orbital-panel-width-lg:375px; --orbital-panel-width-xl:375px;">
                           <div class="_ijm3lbp" style="">
                             <div class="_bnkeqa">
@@ -4269,7 +4269,7 @@
     </div>
   </div>
 
-  <script src="assets/js/pages/message.js" defer></script>
+  <script src="assets/js/pages/messages.js" defer></script>
   <script src="assets/js/components.js"></script>
 </body>
 
