--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -6,6 +6,7 @@
     <title>Searching for stays - Airbnb Help Center</title>
     <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="assets/css/bugs.css" />
   </head>
   <body>
     <div data-application="true">
@@ -616,6 +617,213 @@
                                         >.
                                       </p>
                                     </div>
+                                  </div>
+                                </div>
+                                <div class="hpwdvd6 dir dir-ltr">
+                                  <div>
+                                   <h2>What's covered</h2>
+                                   <p>Host liability insurance covers you if you’re found legally responsible for:</p>
+                                   <ul>
+                                    <li>Bodily injury to a guest (or others)</li>
+                                    <li>Damage to or theft of property belonging to a guest (or others)</li>
+                                    <li>Damage caused by a guest (or others) to common areas, like building lobbies and nearby properties</li>
+                                   </ul>
+                                   <p>Host liability insurance doesn't cover:</p>
+                                   <ul>
+                                    <li>Damage or injury resulting from something done intentionally</li>
+                                    <li>Damage to your place or belongings caused by a guest (that’s covered by <a href="/help/article/279/what-is-the-airbnb-host-guarantee">Host damage protection</a>)</li>
+                                    <li>Other exclusions apply</li>
+                                   </ul>
+                                  </div>
+                                </div>
+                                <div class="c123j3p3 dir dir-ltr">
+                                  <div class="flex c1gk634l dir dir-ltr">
+                                   <div class="c1qodplu dhztwtp dir dir-ltr">
+                                    <div>
+                                     <p>
+                                      <strong>Disclaimer:&nbsp;</strong>Host liability insurance doesn’t cover Hosts who offer stays through Airbnb Travel, LLC; Hosts of <a data-callout-link="" href="/help/article/1608/experience-protection-insurance">Experiences</a>; or
+                                      Hosts in <a data-callout-link="" href="/d/china-host-protection-plan">mainland China </a>or <a data-callout-link="" href="/d/japan-host-insurance?">Japan</a>. Keep in mind that all coverage limits are shown in USD, and that there are
+                                      other <a data-callout-link="" href="/help/article/3145">terms, conditions, and exclusions</a>. If you’re hosting in the UK, the Host liability insurance policy is underwritten by Zurich Insurance, and is arranged and concluded at no
+                                      additional cost for UK Hosts by Airbnb UK Services Limited—an appointed representative of Aon UK Limited, authorized and regulated by the Financial Conduct Authority. Aon’s FCA register number is 310451. You can check this on the
+                                      Financial Services Register by visiting the FCA’s website or contacting the FCA on 0800 111 6768. Host damage protection isn’t related to Host liability insurance. Insurance products arranged by Airbnb UK Services in the UK are
+                                      regulated products. If you’re hosting in the EU, you can access the full details of the insurance intermediary&nbsp;
+                                      <a data-callout-link="" href="/help/article/2999/information-on-the-insurance-intermediaries-pursuant-the-spanish-insurance-distribution-act">here</a>.
+                                     </p>
+                                    </div>
+                                   </div>
+                                  </div>
+                                </div>
+                                <div class="dir dir-ltr" data-testid="page-section">
+                                  <div>
+                                   <div class="hpwdvd6 dir dir-ltr">
+                                    <div>
+                                     <p>
+                                      <strong>4.2 How We Use Information We Collect (<a href="/terms/privacy_policy">Section 3</a>)</strong>
+                                     </p>
+                                    </div>
+                                   </div>
+                                 
+                                   <div class="t4tcady dir dir-ltr">
+                                    <div class="swzp880 dir dir-ltr">
+                                     <div class="c1keg1ue dir dir-ltr">
+                                      <div>
+                                       <table>
+                                        <tbody>
+                                         <tr>
+                                          <td>
+                                           <p><strong>SUB-SECTION</strong></p>
+                                          </td>
+                                          <td>
+                                           <p><strong>LEGAL BASES</strong></p>
+                                          </td>
+                                          <td>
+                                           <p><strong>DATA CATEGORIES USED</strong></p>
+                                          </td>
+                                         </tr>
+                                         <tr>
+                                          <td><p>Provide, improve, and develop Airbnb.</p></td>
+                                          <td>
+                                           <p>We process this personal information for these purposes given our legitimate interest in improving Airbnb and our users’ experience with it, and where it is necessary for the adequate performance of the contract with you.</p>
+                                          </td>
+                                          <td>
+                                           <p>For these purposes, we use the information described in the following sections of the Privacy Policy and this Subpage:</p>
+                                           <br />
+                                           <ul>
+                                            <li>“Information needed to use the Airbnb Platform”</li>
+                                            <li>“Information you choose to give us”</li>
+                                            <li>“Information Automatically Collected by Using the Airbnb Platform and our Payment Services”</li>
+                                            <li>“Personal Information We Collect from Third Parties”</li>
+                                            <li>“Information Necessary For Use of Payment Services”</li>
+                                           </ul>
+                                          </td>
+                                         </tr>
+                                         <tr>
+                                          <td><p>Create and maintain a trusted and safer environment.</p></td>
+                                          <td>
+                                           <p>
+                                            We process this personal information for these purposes given our legitimate interest in protecting Airbnb and our users, to measure the adequate performance of our contract with you, to comply with applicable laws, for the
+                                            protection of your or another person's vital interests, and for reasons of public interest in the area of public health, such as protecting against serious cross-border threats to health.
+                                           </p>
+                                          </td>
+                                          <td>
+                                           <p>For these purposes, we use the information described in the following sections of the Privacy Policy and this Subpage:</p>
+                                           <br />
+                                           <ul>
+                                            <li>“Information needed to use the Airbnb Platform”</li>
+                                            <li>“Information you choose to give us”</li>
+                                            <li>“Information Automatically Collected by Using the Airbnb Platform and our Payment Services”</li>
+                                            <li>“Personal Information We Collect from Third Parties”</li>
+                                            <li>“Information Necessary For Use of Payment Services”</li>
+                                           </ul>
+                                          </td>
+                                         </tr>
+                                         <tr>
+                                          <td><p>Provide, personalize, measure, and improve our advertising and marketing.</p></td>
+                                          <td><p>We will process this personal information with your consent or based on our legitimate interest in undertaking marketing activities to offer you products or services that may be of interest to you.</p></td>
+                                          <td>
+                                           <p>For these purposes, we use the information described in the following sections of the Privacy Policy and this Subpage:</p>
+                                           <br />
+                                           <ul>
+                                            <li>“Information needed to use the Airbnb Platform”</li>
+                                            <li>“Information you choose to give us”</li>
+                                            <li>“Information Automatically Collected by Using the Airbnb Platform and our Payment Services”</li>
+                                            <li>“Personal Information We Collect from Third Parties”</li>
+                                            <li>“Information Necessary For Use of Payment Services”</li>
+                                           </ul>
+                                          </td>
+                                         </tr>
+                                         <tr>
+                                          <td><p>How the Payments Controller uses the personal information collected</p></td>
+                                          <td>
+                                           <p>
+                                            The Payments Controller processes this personal information given its legitimate interest in improving the Payment Services and its users’ experience with it, and where it is necessary for the adequate performance of the contract
+                                            with you and to comply with applicable laws.
+                                           </p>
+                                          </td>
+                                          <td>
+                                           <p>For these purposes, we use the information described in the following section of this Subpage:</p>
+                                           <br />
+                                           <ul>
+                                            <li>“Information Necessary For Use of Payment Services”</li>
+                                           </ul>
+                                           <br />
+                                           <br />
+                                          </td>
+                                         </tr>
+                                        </tbody>
+                                       </table>
+                                      </div>
+                                     </div>
+                                    </div>
+                                   </div>
+                                  </div>
+                                </div>
+                                <div class="t4tcady dir dir-ltr">
+                                  <div class="swzp880 dir dir-ltr">
+                                   <div class="c1keg1ue dir dir-ltr">
+                                    <div>
+                                     <table>
+                                      <tbody>
+                                       <tr>
+                                        <th width="20%">YOUR PLACE OF RESIDENCE</th>
+                                        <th width="40%">YOUR ACTIVITY ON THE AIRBNB PLATFORM</th>
+                                        <th width="20%">YOUR CONTROLLER</th>
+                                        <th width="20%">CONTACT ADDRESS</th>
+                                       </tr>
+                                       <tr>
+                                        <td rowspan="3" valign="top"><strong>Australia</strong></td>
+                                        <td>Payments Services in connection with booking any Host Service.</td>
+                                        <td>Airbnb Payments Australia Pty. Ltd.*</td>
+                                        <td>58 Gipps Street, Collingwood VIC 3066, Australia</td>
+                                       </tr>
+                                       <tr>
+                                        <td>Payments Services for all other activities.</td>
+                                        <td>Airbnb Payments UK Ltd.</td>
+                                        <td>100 New Bridge Street, London, EC4V 6JA, United Kingdom<br /></td>
+                                       </tr>
+                                       <tr>
+                                        <td>All other activities.</td>
+                                        <td>Airbnb Ireland UC(+)</td>
+                                        <td>8 Hanover Quay, Dublin 2, Ireland</td>
+                                       </tr>
+                                      </tbody>
+                                     </table>
+                                    </div>
+                                   </div>
+                                  </div>
+                                </div>
+                                <div class="c123j3p3 dir dir-ltr">
+                                  <div class="caoewxn c1gk634l dir dir-ltr">
+                                   <div class="i1cqlwxc dir dir-ltr">
+                                    <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" style="display: block; height: 16px; width: 16px; fill: var(--ldbkp-d);" aria-hidden="true" role="presentation" focusable="false">
+                                     <path
+                                      d="m8.002.25a7.77 7.77 0 0 1 7.748 7.776 7.75 7.75 0 0 1 -7.521 7.72l-.246.004a7.75 7.75 0 0 1 -7.73-7.513l-.003-.245a7.75 7.75 0 0 1 7.752-7.742zm1.949 8.5h-3.903c.155 2.897 1.176 5.343 1.886 5.493l.068.007c.68-.002 1.72-2.365 1.932-5.23zm4.255 0h-2.752c-.091 1.96-.53 3.783-1.188 5.076a6.257 6.257 0 0 0 3.905-4.829zm-9.661 0h-2.75a6.257 6.257 0 0 0 3.934 5.075c-.615-1.208-1.036-2.875-1.162-4.686l-.022-.39zm1.188-6.576-.115.046a6.257 6.257 0 0 0 -3.823 5.03h2.75c.085-1.83.471-3.54 1.059-4.81zm2.262-.424c-.702.002-1.784 2.512-1.947 5.5h3.904c-.156-2.903-1.178-5.343-1.892-5.494l-.065-.007zm2.28.432.023.05c.643 1.288 1.069 3.084 1.157 5.018h2.748a6.275 6.275 0 0 0 -3.929-5.068z"
+                                     ></path>
+                                    </svg>
+                                   </div>
+                                   <div class="c1qodplu g4gpy3h dir dir-ltr">
+                                    <div>
+                                     <p><strong>IMPORTANT SUPPLEMENTAL INFORMATION</strong></p>
+                                     <p>
+                                      <strong>Outside of the United States</strong>. If you reside outside of the United States, such as in the European Economic Area (“<strong>EEA</strong>”) visit our “
+                                      <a data-callout-link="" href="/terms/outside_us">Outside of the United States</a>” page to learn about (i) the controller(s) of your personal information, (ii) legal bases, including legitimate interests, for collecting and processing
+                                      your personal information, (iii) safeguards relied upon for transferring personal information outside the EEA, (iv) your rights, and (v) contact details of the controller(s) and Data Protection Officer.
+                                     </p>
+                                     <p>
+                                      <strong>California and Vermont</strong>. If you reside in California or Vermont, visit our “<a data-callout-link="" href="/terms/california_vermont">California and Vermont</a>” page to learn about specific privacy information that
+                                      applies to you.
+                                     </p>
+                                     <p>
+                                      <strong>China</strong>. If you reside in the People’s Republic of China, which for purposes of this Privacy Policy does not include Hong Kong, Macau and Taiwan (“<strong>China</strong>”),&nbsp;Airbnb Internet (Beijing) Co. Ltd.
+                                      (安彼迎网络（北京）有限公司) (“Airbnb China”) is the controller of your personal information for all activities except in relation to the booking or offering of any Host Service located outside China. Visit our “
+                                      <a data-callout-link="" href="https://www.airbnb.cn/help/article/2855">China</a>” page to learn more about the data controller and how your information is handled in relation to activities within China and your rights.
+                                     </p>
+                                     <p>
+                                      <strong>Enterprise Customers and Airbnb for Work</strong>. If you use our enterprise services or have linked your account with an Airbnb for Work customer, visit our “
+                                      <a data-callout-link="" href="/terms/enterprise">Enterprise Customers and Airbnb for Work</a>” page to learn about specific privacy information that applies to you.
+                                     </p>
+                                    </div>
+                                   </div>
                                   </div>
                                 </div>
                                 <div
