add space show more modal

--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -2107,6 +2107,7 @@
                                                 <button
                                                   type="button"
                                                   class="b1k5q1b3 v18vkvko dir dir-ltr"
+                                                  data-modal="#space-show-more-modal"
                                                 >
                                                   <span
                                                     class="c1d1a0n6 dir dir-ltr"
@@ -14290,7 +14291,7 @@
                 <div class="_1lplc7"></div>
                 <div class="m12aegvk dir dir-ltr">
                   <div class="_1ynbv25">
-                    <div class="c1yo0219 dir dir-ltr">
+                    <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           data-plugin-in-point-id="AIRCOVER_LEARN_MORE_MODAL"
@@ -14407,6 +14408,223 @@
                               </div>
                             </div>
                           </section>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="container__border-0"
+              aria-hidden="true"
+              tabindex="0"
+            ></div>
+          </div>
+        </div>
+      </section>
+      <div class="container__border-0">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+
+    <!-- space show more modal -->
+    <div id="space-show-more-modal" class="hidden" dir="ltr">
+      <div class="modal__backdrop"></div>
+      <section>
+        <div
+          class="modal__container"
+          data-testid="modal-container"
+          style="padding-top: 0 !important"
+        >
+          <div class="contents">
+            <div
+              class="container__border-0"
+              aria-hidden="true"
+              tabindex="0"
+            ></div>
+            <div class="contents">
+              <div
+                role="dialog"
+                aria-modal="true"
+                class="_244p2lw"
+                style="
+                  position: relative;
+                  max-width: 780px !important;
+                  border-radius: 0 !important;
+                "
+              >
+                <div class="_pa35zs">
+                  <button
+                    data-button="close"
+                    aria-label="Close"
+                    type="button"
+                    class="btn-close"
+                  >
+                    <span class="relative"
+                      ><svg
+                        viewBox="0 0 18 18"
+                        role="presentation"
+                        aria-hidden="true"
+                        focusable="false"
+                        style="
+                          height: 16px;
+                          width: 16px;
+                          display: block;
+                          fill: currentcolor;
+                        "
+                      >
+                        <path
+                          d="m13.7 16.29a1 1 0 1 1 -1.42 1.41l-8-8a1 1 0 0 1 0-1.41l8-8a1 1 0 1 1 1.42 1.41l-7.29 7.29z"
+                          fill-rule="evenodd"
+                        ></path></svg
+                    ></span>
+                  </button>
+                </div>
+                <div class="_1lplc7"></div>
+                <div class="_1jza0fl">
+                  <div tabindex="0" class="_8pghme8">
+                    <div class="_1a5fl1v">
+                      <div class="_3hmsj">
+                        <div
+                          style="
+                            display: contents;
+                            --dls19-brand-color: var(--f-k-smk-x);
+                          "
+                        >
+                          <div class="_1ynbv25">
+                            <div class="c1yo0219 dir dir-ltr">
+                              <div style="--gp-section-max-width: 1120px">
+                                <div
+                                  data-plugin-in-point-id="DESCRIPTION_MODAL"
+                                  data-section-id="DESCRIPTION_MODAL"
+                                  style="
+                                    padding-top: 16px;
+                                    padding-bottom: 32px;
+                                  "
+                                >
+                                  <section>
+                                    <div class="_68a6l8">
+                                      <h2
+                                        tabindex="-1"
+                                        class="_14i3z6h"
+                                        elementtiming="LCP-target"
+                                      >
+                                        About this space
+                                      </h2>
+                                    </div>
+                                    <div class="_178zopn">
+                                      <div>
+                                        <span class="ll4r2nl dir dir-ltr"
+                                          >We are very happy to offer a large
+                                          luxury 9 double bedroom (with
+                                          en-suite) villa which comfortably
+                                          sleeps a total of 19 people. The house
+                                          comes with a team of 5 staff plus a
+                                          van and driver at your disposal
+                                          throughout your stay and included in
+                                          the nightly rate. The house and pool
+                                          is all exclusively yours giving you
+                                          total privacy.</span
+                                        >
+                                      </div>
+                                    </div>
+                                    <div class="_178zopn">
+                                      <div>
+                                        <div class="_pgfqnw">
+                                          <h3
+                                            tabindex="-1"
+                                            class="_14i3z6h"
+                                            elementtiming="LCP-target"
+                                          >
+                                            The space
+                                          </h3>
+                                        </div>
+                                        <span class="ll4r2nl dir dir-ltr"
+                                          >The villa (Kalamansi House) is
+                                          perched high on a hilltop giving it
+                                          fabulous far reaching views across
+                                          Boracay, Panay and the ocean. It is
+                                          made up of a car port in the basement
+                                          with table tennis table; a very
+                                          spacious living area on the ground
+                                          floor with open plan kitchen, living
+                                          room and TV nook surrounded by large
+                                          openings onto equally spacious outdoor
+                                          areas which include al fresco dining
+                                          with bbq area, bar and cabana, sunken
+                                          seating area plus 18mt infinity pool;
+                                          5 double bedrooms with en suites on
+                                          the first floor; two double bedrooms
+                                          with en suites plus a billiard room on
+                                          the second (top) floor. We have two
+                                          more double bedrooms with en-suite
+                                          just off the car port area making 9
+                                          bedrooms. <br /><br />The house is
+                                          south west facing thus benefiting from
+                                          fabulous sunshine throughout the day
+                                          ending with the famous Boracay
+                                          sunsets. It also benefits from a good
+                                          breeze most of the year. The ground
+                                          floor also has a good HIFI sound
+                                          system with 16 speakers.
+                                          <br /><br />To compliment the house we
+                                          have a great team made up of 3 girls
+                                          and two boys who are keen to make your
+                                          holiday as seamless and pleasurable as
+                                          possible. They will help with shopping
+                                          for groceries and with cooking and
+                                          tidying up. They will also make your
+                                          room up when convenient for you. We
+                                          keep a stock of basic soft and
+                                          alcoholic drinks which you can have at
+                                          cost. We have a van and driver at your
+                                          disposal 24/7; from 8am to 12 midnight
+                                          it's included in the nightly rate and
+                                          between midnight and 8am it's PHP500
+                                          per trip. Please note the van is only
+                                          for the use of guests staying in the
+                                          house.<br /><br />All the bedrooms
+                                          have aircon plus wifi and cable TV
+                                          with numerous HD channels. We have a
+                                          generator to take care of the
+                                          occasional power blackouts. Each
+                                          bedroom will be made up for you at
+                                          your convenience with new towels every
+                                          day. We also supply shampoo and soap
+                                          as well as a hair dryer. Each room has
+                                          sliding doors onto an outside terrace.
+                                          <br /><br />The house is situated in a
+                                          residential area which is 10 minutes
+                                          van ride from all the action on White
+                                          Beach.</span
+                                        >
+                                      </div>
+                                    </div>
+                                    <div class="_178zopn">
+                                      <div>
+                                        <div class="_pgfqnw">
+                                          <h3
+                                            tabindex="-1"
+                                            class="_14i3z6h"
+                                            elementtiming="LCP-target"
+                                          >
+                                            Guest access
+                                          </h3>
+                                        </div>
+                                        <span class="ll4r2nl dir dir-ltr"
+                                          >The house is totally private and only
+                                          for the guests - there are no shared
+                                          areas.</span
+                                        >
+                                      </div>
+                                    </div>
+                                  </section>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
