--- a/ticket-selection.html
+++ b/ticket-selection.html
@@ -841,7 +841,7 @@
                   </div>
                 </div>
               </main>
-              <div class="c1yo0219 dir dir-ltr">
+              <div class="flex-before-after dir dir-ltr">
                 <footer
                   role="contentinfo"
                   class="footer__content-info"
