--- a/feedback.html
+++ b/feedback.html
@@ -649,7 +649,7 @@ sdfsdfsdfsdf</textarea
                   </div>
                 </div>
               </div>
-              <div class="c1yo0219 dir dir-ltr">
+              <div class="flex-before-after dir dir-ltr">
                 <footer
                   role="contentinfo"
                   class="footer__content-info"
