--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2279,7 +2279,7 @@
                     <div class="_1s09xaf">
                       <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
                         <div class="_1q9sh65">
-                          <div class="c1yo0219 dir dir-ltr" style="">
+                          <div class="flex-before-after dir dir-ltr" style="">
                             <div style="--gp-section-max-width:1120px;">
                               <div data-plugin-in-point-id="INBOX_FILTERS_HEADER" data-section-id="INBOX_FILTERS_HEADER">
                                 <div class="_cys8nx">Filter messages</div>
@@ -2293,7 +2293,7 @@
                   </header>
                   <div class="_10toigd">
                     <main id="site-content">
-                      <div class="c1yo0219 dir dir-ltr" style="">
+                      <div class="flex-before-after dir dir-ltr" style="">
                         <div style="--gp-section-max-width:1120px;">
                           <div class="_le6wlg">
                             <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
@@ -2318,7 +2318,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="c1yo0219 dir dir-ltr" style="">
+                      <div class="flex-before-after dir dir-ltr" style="">
                         <div style="--gp-section-max-width:1120px;">
                           <div class="_le6wlg">
                             <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
@@ -2364,7 +2364,7 @@
                     </main>
                   </div>
                   <footer>
-                    <div class="c1yo0219 dir dir-ltr" style="">
+                    <div class="flex-before-after dir dir-ltr" style="">
                       <div style="--gp-section-max-width:1120px;">
                         <div data-plugin-in-point-id="INBOX_FILTERS_FOOTER" data-section-id="INBOX_FILTERS_FOOTER">
                           <div data-testid="filters-footer" class="_1fc5ti">
@@ -2415,7 +2415,7 @@
                     <div class="_1s09xaf">
                       <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
                         <div class="_1q9sh65">
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width:1120px;">
                               <div data-plugin-in-point-id="INBOX_LISTING_PICKER_HEADER" data-section-id="INBOX_LISTING_PICKER_HEADER">
                                 <div class="_cys8nx">Filter by Experiences</div>
@@ -2429,7 +2429,7 @@
                   </header>
                   <div class="_10toigd">
                       <main id="site-content">
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                               <div style="--gp-section-max-width:1120px;">
                                   <div class="_le6wlg">
                                       <div class="plmw1e5 mq5rv0q dir dir-ltr" style="--maxWidth:1120px;">
@@ -2462,7 +2462,7 @@
                       </main>
                   </div>
                   <footer>
-                    <div class="c1yo0219 dir dir-ltr">
+                    <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width:1120px;">
                         <div data-plugin-in-point-id="INBOX_LISTING_PICKER_FOOTER" data-section-id="INBOX_LISTING_PICKER_FOOTER">
                           <div data-testid="filters-footer" class="_1fc5ti">
