--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -1178,7 +1178,7 @@
                   </div>
                 </div>
               </div>
-              <div class="c1yo0219 dir dir-ltr">
+              <div class="flex-before-after dir dir-ltr">
                 <footer
                   role="contentinfo"
                   class="footer__content-info"
