--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -6793,6 +6793,7 @@
                                                 <button
                                                   type="button"
                                                   class="link"
+                                                  data-modal="#house-rules-modal"
                                                 >
                                                   <section>
                                                     <div
@@ -16285,6 +16286,260 @@
       </div>
     </div>
 
+    <!-- house rules modal -->
+    <div id="house-rules-modal" class="hidden" dir="ltr">
+      <div class="modal__backdrop"></div>
+      <section>
+        <div
+          class="modal__container"
+          data-testid="modal-container"
+          style="padding-top: 0 !important"
+        >
+          <div class="contents">
+            <div
+              class="container__border-0"
+              aria-hidden="true"
+              tabindex="0"
+            ></div>
+            <div class="contents">
+              <div
+                role="dialog"
+                aria-modal="true"
+                class="_244p2lw"
+                style="
+                  position: relative;
+                  max-width: 780px !important;
+                  border-radius: 0 !important;
+                  height: 100vh;
+                "
+              >
+                <div class="_pa35zs">
+                  <button
+                    data-button="close"
+                    aria-label="Close"
+                    type="button"
+                    class="btn-close"
+                  >
+                    <span class="relative"
+                      ><svg
+                        viewBox="0 0 18 18"
+                        role="presentation"
+                        aria-hidden="true"
+                        focusable="false"
+                        style="
+                          height: 16px;
+                          width: 16px;
+                          display: block;
+                          fill: currentcolor;
+                        "
+                      >
+                        <path
+                          d="m13.7 16.29a1 1 0 1 1 -1.42 1.41l-8-8a1 1 0 0 1 0-1.41l8-8a1 1 0 1 1 1.42 1.41l-7.29 7.29z"
+                          fill-rule="evenodd"
+                        ></path></svg
+                    ></span>
+                  </button>
+                </div>
+                <div class="_1lplc7"></div>
+                <div class="_17itzz4">
+                  <div style="padding: 16px 0px 0px">
+                    <div tabindex="0" class="_x0votz">
+                      <div class="_1a5fl1v">
+                        <div class="_3hmsj">
+                          <div
+                            style="
+                              display: contents;
+                              --dls19-brand-color: var(--f-k-smk-x);
+                            "
+                          >
+                            <div class="_le6wlg">
+                              <div
+                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                style="--maxWidth: 1120px"
+                              >
+                                <section>
+                                  <div class="_1byskwn">
+                                    <div class="_1lwleztw">
+                                      <div class="_1axz042">
+                                        <div class="_m5uolq">
+                                          <h2
+                                            tabindex="-1"
+                                            class="_14i3z6h"
+                                            elementtiming="LCP-target"
+                                          >
+                                            House rules
+                                          </h2>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="_1q2ge3br">
+                                      <div>
+                                        <div class="_oes4ik">
+                                          <div class="i1303y2k dir dir-ltr">
+                                            <div
+                                              aria-hidden="true"
+                                              class="iv1oy2i dir dir-ltr"
+                                            >
+                                              <svg
+                                                viewBox="0 0 32 32"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                aria-hidden="true"
+                                                role="presentation"
+                                                focusable="false"
+                                                style="
+                                                  display: block;
+                                                  height: 16px;
+                                                  width: 16px;
+                                                  fill: currentcolor;
+                                                "
+                                              >
+                                                <path
+                                                  d="M16 1C7.716 1 1 7.716 1 16s6.716 15 15 15 15-6.716 15-15S24.284 1 16 1zm7.895 22.954l-9.526-5.5a1.5 1.5 0 0 1-.743-1.154l-.007-.145v-11h3V16.29l8.776 5.067-1.5 2.598z"
+                                                ></path>
+                                              </svg>
+                                            </div>
+                                            <span>Check-in: After 2:00 PM</span>
+                                          </div>
+                                          <div class="i1303y2k dir dir-ltr">
+                                            <div
+                                              aria-hidden="true"
+                                              class="iv1oy2i dir dir-ltr"
+                                            >
+                                              <svg
+                                                viewBox="0 0 32 32"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                aria-hidden="true"
+                                                role="presentation"
+                                                focusable="false"
+                                                style="
+                                                  display: block;
+                                                  height: 16px;
+                                                  width: 16px;
+                                                  fill: currentcolor;
+                                                "
+                                              >
+                                                <path
+                                                  d="M16 1C7.716 1 1 7.716 1 16s6.716 15 15 15 15-6.716 15-15S24.284 1 16 1zm7.895 22.954l-9.526-5.5a1.5 1.5 0 0 1-.743-1.154l-.007-.145v-11h3V16.29l8.776 5.067-1.5 2.598z"
+                                                ></path>
+                                              </svg>
+                                            </div>
+                                            <span>Checkout: 11:00 AM</span>
+                                          </div>
+                                          <div class="i1303y2k dir dir-ltr">
+                                            <div
+                                              aria-hidden="true"
+                                              class="iv1oy2i dir dir-ltr"
+                                            >
+                                              <svg
+                                                viewBox="0 0 32 32"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                aria-hidden="true"
+                                                role="presentation"
+                                                focusable="false"
+                                                style="
+                                                  display: block;
+                                                  height: 16px;
+                                                  width: 16px;
+                                                  fill: currentcolor;
+                                                "
+                                              >
+                                                <path
+                                                  d="M24.242 19H27v2.758L24.242 19zM23 15c1.103 0 2 .897 2 2h2c0-2.206-1.794-4-4-4h-4.758l2 2H23zm6 8.758l2 2V19h-2v4.758zM18 5V3c-2.636 0-4.875 1.71-5.679 4.079l1.701 1.701C14.14 6.678 15.87 5 18 5zM4 19c-1.103 0-2 .897-2 2v4c0 1.103.897 2 2 2h19.758l-8-8H4zm25-2h2c0-3.629-2.429-6.701-5.746-7.677A3.97 3.97 0 0 0 26 7c0-2.206-1.794-4-4-4v2c1.103 0 2 .897 2 2s-.897 2-2 2v2h1c3.309 0 6 2.691 6 6zM3.293 3.707l26 26 1.414-1.414-26-26-1.414 1.414z"
+                                                ></path>
+                                              </svg>
+                                            </div>
+                                            <span>No smoking</span>
+                                          </div>
+                                          <div class="i1303y2k dir dir-ltr">
+                                            <div
+                                              aria-hidden="true"
+                                              class="iv1oy2i dir dir-ltr"
+                                            >
+                                              <svg
+                                                viewBox="0 0 32 32"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                aria-hidden="true"
+                                                role="presentation"
+                                                focusable="false"
+                                                style="
+                                                  display: block;
+                                                  height: 16px;
+                                                  width: 16px;
+                                                  fill: currentcolor;
+                                                "
+                                              >
+                                                <path
+                                                  d="M3.707 2.293l26 26-1.414 1.414-26-26 1.414-1.414zm8.164 13.821l11.149 11.15a3.993 3.993 0 0 1-3.053.612l-.234-.055L16 26.82l-3.733 1.001a4 4 0 0 1-2.941-.347l-.204-.118-.197-.131a4 4 0 0 1-1.08-5.398l.119-.177 3.907-5.536zM27 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8zM5 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm16-8a4 4 0 1 1 0 8 4 4 0 0 1 0-8zM11 4a4 4 0 0 1 3.381 6.138l-5.52-5.519A3.981 3.981 0 0 1 11 4z"
+                                                ></path>
+                                              </svg>
+                                            </div>
+                                            <span>No pets</span>
+                                          </div>
+                                          <div class="i1303y2k dir dir-ltr">
+                                            <div
+                                              aria-hidden="true"
+                                              class="iv1oy2i dir dir-ltr"
+                                            >
+                                              <svg
+                                                viewBox="0 0 32 32"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                aria-hidden="true"
+                                                role="presentation"
+                                                focusable="false"
+                                                style="
+                                                  display: block;
+                                                  height: 16px;
+                                                  width: 16px;
+                                                  fill: currentcolor;
+                                                "
+                                              >
+                                                <path
+                                                  d="M5.12 9.363l13.882 13.88c-.494.349-1.01.694-1.549 1.035L19.65 27.2a1.125 1.125 0 0 1-.433 1.7l-.111.043-.157.039-.04.006-.158.013H17v3h-2v-3h-1.75a1.125 1.125 0 0 1-1.117-1.264l.025-.131.067-.189.021-.045.103-.17 2.14-2.862C8.212 20.918 5 16.457 5 11c0-.556.041-1.103.12-1.637zm-1.413-7.07l26 26-1.414 1.414-26-26 1.414-1.414zM16 0c5.909 0 11 5.275 11 11 0 2.915-1.167 5.676-3.472 8.286L7.853 3.609A10.972 10.972 0 0 1 16 0zm6 7a2 2 0 1 0 0 4 2 2 0 0 0 0-4z"
+                                                ></path>
+                                              </svg>
+                                            </div>
+                                            <span>No parties or events</span>
+                                          </div>
+                                        </div>
+                                        <div class="_oes4ik">
+                                          <div class="_1ahci1n">
+                                            <h3
+                                              tabindex="-1"
+                                              class="_14i3z6h"
+                                              elementtiming="LCP-target"
+                                            >
+                                              Additional rules
+                                            </h3>
+                                          </div>
+                                          - Smoking allowed in outside areas
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </section>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="container__border-0"
+              aria-hidden="true"
+              tabindex="0"
+            ></div>
+          </div>
+        </div>
+      </section>
+      <div class="container__border-0">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
     <script src="../assets/js/components.js"></script>
     <script src="../assets/js/pages/products.js" defer></script>
   </body>
