--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>Stay on a Working Flower Farm in a Modern Home - Farm stays for Rent in Stellenbosch , Western Cape, South Africa - Airbnb</title>
