--- a/topic.html
+++ b/topic.html
@@ -2360,7 +2360,7 @@
               <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
               <div class="contents">
                 <div role="dialog" aria-label="Content type filters" aria-modal="true" class="_ewwxwe" tabindex="-1"
-                    style="position: absolute; bottom: 553.547px; left: 315px; transform-origin: left bottom;">
+                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                   <div style="margin-top: 8px;">
                     <div class="_12kfhdn">
                       <div class="_1jcr8ov">
