fix resources mobile view, and other resources pages

--- a/topic.html
+++ b/topic.html
@@ -169,7 +169,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="hidden-xl" style="height: 64px;padding-top: 15px;">
+                    <div class="hidden-xl _ni9axhe">
                       <div class="_cfvh61">
                         <div data-hideat="largeAndAbove">
                           <div style="margin-right: 24px">
