--- a/video.html
+++ b/video.html
@@ -169,7 +169,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="hidden-xl"  style="height: 64px;padding-top: 15px;">
+                    <div class="hidden-xl _ni9axhe">
                       <div class="_cfvh61">
                         <div data-hideat="largeAndAbove">
                           <div style="margin-right: 24px">
@@ -955,7 +955,7 @@
                       <section>
                         <div class="_9d2j0e">
                           <nav aria-label="breadcrumb">
-                              <ol class="_1nqxw3c">
+                              <ol class="_1nqxw3c hidden-scrollbar">
                                   <li class="_1eaes69"><a href="/resources/hosting-experiences" class="_pt3ip3y">
                                           <div class="_7yqyxg" style="color:#222222">Resource Center</div>
                                       </a>
