--- a/listings-product/explore-who.html
+++ b/listings-product/explore-who.html
@@ -86,7 +86,7 @@
                                           id="tab--vertical-tabs--0"
                                           aria-controls="panel--vertical-tabs--0"
                                           aria-selected="true"
-                                          class="_17w1wv2c"
+                                          class="_17w1wv2c explore__mobile-header-item--active"
                                           role="tab"
                                         >
                                           Stays</button
@@ -101,15 +101,6 @@
                                         >
                                           Experiences
                                         </button>
-                                        <div
-                                          class="t11xb1yy dir dir-ltr"
-                                          _id="vertical-tabs--2"
-                                          style="
-                                            position: absolute;
-                                            left: 214.109px;
-                                            width: 40.6562px;
-                                          "
-                                        ></div>
                                       </div>
                                     </div>
                                     <div></div>
