--- a/products-mobile.html
+++ b/products-mobile.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../assets/css/global.css" />
-    <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>
       9 double bedroom luxury villa with infinity pool - Houses for Rent in
       Malay, Western Visayas, Philippines - Airbnb
@@ -16540,7 +16540,7 @@
         <div aria-live="assertive" aria-atomic="true"></div>
       </div>
     </div>
-    <script src="../assets/js/components.js"></script>
-    <script src="../assets/js/pages/products.js" defer></script>
+    <script src="assets/js/components.js"></script>
+    <script src="assets/js/pages/products.js" defer></script>
   </body>
 </html>
