--- a/lps-resources/resources.html
+++ b/lps-resources/resources.html
@@ -4352,7 +4352,7 @@
         </div>
     </div>
 
-    <script src="assets/js/pages/resources.js" defer></script>
+    <script src="../assets/js/pages/resources.js" defer></script>
   
   </body>
 </html>
