--- a/accessibility.html
+++ b/accessibility.html
@@ -17,7 +17,7 @@
   </noscript>
   <div data-application="true" class="hidden-md">
     <div dir="ltr">
-      <div data-theme="" class="t1bgcr6e ">
+      <div data-theme="" class="overflow-x-hidden ">
         <div class="initial dir dir-ltr" data-tracking-events="impression"
           data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
           data-testid="AccessibilityLandingPage.NAV_BAR">
@@ -391,7 +391,7 @@
   <div data-application="true" class="hidden block-md body-scroll">
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e ">
+        <div data-theme="" class="overflow-x-hidden ">
           <div class="dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
             data-testid="AccessibilityLandingPage.NAV_BAR" style="width: 100%;height: 72px;">
