--- a/host-liability-insurance.html
+++ b/host-liability-insurance.html
@@ -10,7 +10,7 @@
   <body>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="overflow-x-hidden">
           <div>
             <div>
               <header>
