--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -40,7 +40,7 @@
 
     <div data-application="true" class='hidden-md'>
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="overflow-x-hidden">
           <div>
             <div>
               <div
