--- a/lps-resources/merchandising.html
+++ b/lps-resources/merchandising.html
@@ -13,7 +13,7 @@
   <body>
     <div data-application="true" class="hidden-md">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="overflow-x-hidden">
           <div>
             <div>
               <div
@@ -10532,7 +10532,7 @@
     </div>
     <div data-application="true" class="hidden block-md">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="overflow-x-hidden">
           <div>
             <div>
               <div
