--- a/messages.html
+++ b/messages.html
@@ -13,7 +13,7 @@
 <body>
   <div data-application="true">
     <div dir="ltr">
-      <div data-theme="" class="t1bgcr6e ">
+      <div data-theme="" class="overflow-x-hidden ">
         <div>
           <div>
             <div
