--- a/payments/payment.html
+++ b/payments/payment.html
@@ -39,7 +39,7 @@
     <div id="education-overlay-root"></div>
     <div data-application="true" class="hidden-md">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="overflow-x-hidden">
           <div>
             <div>
               <div
