--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -11,7 +11,7 @@
   <body>
     <div data-application="true">
       <div dir="ltr">
-        <div data-theme="" class="t1bgcr6e">
+        <div data-theme="" class="overflow-x-hidden">
           <div>
             <div>
               <header>
@@ -793,7 +793,7 @@
                                   </div>
                                 </div>
                                 <div class="c123j3p3 dir dir-ltr">
-                                  <div class="caoewxn c1gk634l dir dir-ltr">
+                                  <div class="flex c1gk634l dir dir-ltr">
                                    <div class="i1cqlwxc dir dir-ltr">
                                     <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" style="display: block; height: 16px; width: 16px; fill: var(--ldbkp-d);" aria-hidden="true" role="presentation" focusable="false">
                                      <path
